@@ -1,38 +1,37 @@
 package de.cronn.proxy.ssh;
 
-import static org.junit.Assert.*;
+import static org.assertj.core.api.Assertions.*;
 
-import java.util.Arrays;
 import java.util.List;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class JSchHelperTest {
+class JSchHelperTest {
 
 	@Test
-	public void testHostKeysPreferEcdsa() throws Exception {
+	void testHostKeysPreferEcdsa() throws Exception {
 		JSchHelper.reconfigureServerHostKeyOrder(JSchHelper.ServerHostKeySortOrder.PREFER_ECDSA);
-		List<HostKeyType> expectedHostKeys = Arrays.asList(//
+		List<HostKeyType> expectedHostKeys = List.of(//
 			HostKeyType.ECDSA256, //
 			HostKeyType.ECDSA384, //
 			HostKeyType.ECDSA521, //
 			HostKeyType.SSH_RSA, //
 			HostKeyType.SSH_DSS //
 		);
-		assertEquals(expectedHostKeys, JSchHelper.getServerHostKeys());
+		assertThat(JSchHelper.getServerHostKeys()).isEqualTo(expectedHostKeys);
 	}
 
 	@Test
-	public void testHostKeysPreferRsa() throws Exception {
+	void testHostKeysPreferRsa() throws Exception {
 		JSchHelper.reconfigureServerHostKeyOrder(JSchHelper.ServerHostKeySortOrder.PREFER_RSA);
-		List<HostKeyType> expectedHostKeys = Arrays.asList(//
+		List<HostKeyType> expectedHostKeys = List.of(//
 			HostKeyType.SSH_RSA, //
 			HostKeyType.ECDSA256, //
 			HostKeyType.ECDSA384, //
 			HostKeyType.ECDSA521, //
 			HostKeyType.SSH_DSS //
 		);
-		assertEquals(expectedHostKeys, JSchHelper.getServerHostKeys());
+		assertThat(expectedHostKeys).isEqualTo(JSchHelper.getServerHostKeys());
 	}
 
 }
